add shared cashflows