@@ -15,6 +15,7 @@ import s25601.pjwstk.personalfinanceassistant.repository.*;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/cashflow")
@@ -41,12 +42,31 @@ public class CashflowController {
         return null;
     }
 
-    // Helper method to get all accessible accounts: owned + shared
     private List<Account> getAccessibleAccounts(User user) {
         List<Account> owned = accountRepository.findByUserId(user.getId());
         List<Account> shared = accountRepository.findBySharedUsersId(user.getId());
         owned.addAll(shared);
-        return owned.stream().distinct().toList();
+        return owned.stream().distinct().collect(Collectors.toList());
+    }
+
+    /**
+     * Recalculate balance for an account based on all its cashflows (income - expense)
+     */
+    private void recalculateAccountBalance(Account account) {
+        // Sum of all incomes for this account
+        BigDecimal totalIncome = cashflowRepository.findByAccount(account).stream()
+                .filter(cf -> cf.getType() == CashflowType.INCOME)
+                .map(Cashflow::getAmount)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        // Sum of all expenses for this account
+        BigDecimal totalExpense = cashflowRepository.findByAccount(account).stream()
+                .filter(cf -> cf.getType() == CashflowType.EXPENSE)
+                .map(Cashflow::getAmount)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        account.setBalance(totalIncome.subtract(totalExpense));
+        accountRepository.save(account);
     }
 
     @GetMapping
@@ -81,80 +101,68 @@ public class CashflowController {
             dateError = "Invalid date format";
         }
 
-        if (dateError != null) {
-            model.addAttribute("dateError", dateError);
-            model.addAttribute("cashflows", List.<Cashflow>of()); // empty list
-            model.addAttribute("filteredTotal", BigDecimal.ZERO);
-            model.addAttribute("incomeTotal", BigDecimal.ZERO);
-            model.addAttribute("expenseTotal", BigDecimal.ZERO);
-            model.addAttribute("netTotal", BigDecimal.ZERO);
-            model.addAttribute("incomeCategories", IncomeCategory.values());
-            model.addAttribute("expenseCategories", ExpenseCategory.values());
+        List<Account> accessibleAccounts = getAccessibleAccounts(user);
+        List<Long> accessibleAccountIds = accessibleAccounts.stream()
+                .map(Account::getId)
+                .collect(Collectors.toList());
 
-            // UPDATED: use accessible accounts (owned + shared)
-            model.addAttribute("accounts", getAccessibleAccounts(user));
+        List<Cashflow> cashflows = List.of();
 
-            // pass back the filters as is
-            model.addAttribute("selectedType", type);
-            model.addAttribute("selectedCategory", category);
-            model.addAttribute("selectedDateFrom", dateFrom);
-            model.addAttribute("selectedDateTo", dateTo);
-            model.addAttribute("selectedAccount", account);
-            return "cashflow_list";
+        if (dateError == null) {
+            // <-- IMPORTANT: fetch cashflows by accessible account IDs, NOT by user
+            cashflows = cashflowRepository.findByAccountIdIn(accessibleAccountIds);
+
+            final LocalDate fromDateFinal = fromDate;
+            final LocalDate toDateFinal = toDate;
+
+            // Filter cashflows by optional parameters
+            cashflows = cashflows.stream()
+                    .filter(cf -> {
+                        boolean match = true;
+                        if (type != null && !type.isEmpty()) {
+                            match &= cf.getType().name().equalsIgnoreCase(type);
+                        }
+                        if (category != null && !category.isEmpty()) {
+                            String cat = cf.getType() == CashflowType.INCOME ?
+                                    (cf.getIncomeCategory() != null ? cf.getIncomeCategory().name() : "") :
+                                    (cf.getExpenseCategory() != null ? cf.getExpenseCategory().name() : "");
+                            match &= cat.equalsIgnoreCase(category);
+                        }
+                        if (fromDateFinal != null) {
+                            match &= !cf.getDate().isBefore(fromDateFinal);
+                        }
+                        if (toDateFinal != null) {
+                            match &= !cf.getDate().isAfter(toDateFinal);
+                        }
+                        if (account != null && !account.isEmpty()) {
+                            match &= cf.getAccount() != null && cf.getAccount().getName().equalsIgnoreCase(account);
+                        }
+                        return match;
+                    })
+                    .collect(Collectors.toList());
         }
 
-        final LocalDate fromDateFinal = fromDate;
-        final LocalDate toDateFinal = toDate;
+        if (dateError != null) {
+            model.addAttribute("dateError", dateError);
+        }
 
-        List<Cashflow> allCashflows = cashflowRepository.findByUserId(user.getId());
-
-        List<Cashflow> filtered = allCashflows.stream().filter(cf -> {
-            boolean match = true;
-
-            if (type != null && !type.isEmpty()) {
-                match &= cf.getType().name().equalsIgnoreCase(type);
-            }
-
-            if (category != null && !category.isEmpty()) {
-                String cat = cf.getType() == CashflowType.INCOME ?
-                        (cf.getIncomeCategory() != null ? cf.getIncomeCategory().name() : "") :
-                        (cf.getExpenseCategory() != null ? cf.getExpenseCategory().name() : "");
-                match &= cat.equalsIgnoreCase(category);
-            }
-
-            if (fromDateFinal != null) {
-                match &= !cf.getDate().isBefore(fromDateFinal);  // cf.date >= dateFrom
-            }
-
-            if (toDateFinal != null) {
-                match &= !cf.getDate().isAfter(toDateFinal);  // cf.date <= dateTo
-            }
-
-            if (account != null && !account.isEmpty()) {
-                match &= cf.getAccount() != null &&
-                        cf.getAccount().getName().equalsIgnoreCase(account);
-            }
-
-            return match;
-        }).toList();
-
-        BigDecimal filteredTotal = filtered.stream()
+        BigDecimal filteredTotal = cashflows.stream()
                 .map(Cashflow::getAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        BigDecimal incomeTotal = filtered.stream()
+        BigDecimal incomeTotal = cashflows.stream()
                 .filter(c -> c.getType() == CashflowType.INCOME)
                 .map(Cashflow::getAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        BigDecimal expenseTotal = filtered.stream()
+        BigDecimal expenseTotal = cashflows.stream()
                 .filter(c -> c.getType() == CashflowType.EXPENSE)
                 .map(Cashflow::getAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         BigDecimal netTotal = incomeTotal.subtract(expenseTotal);
 
-        model.addAttribute("cashflows", filtered);
+        model.addAttribute("cashflows", cashflows);
         model.addAttribute("filteredTotal", filteredTotal);
         model.addAttribute("incomeTotal", incomeTotal);
         model.addAttribute("expenseTotal", expenseTotal);
@@ -163,10 +171,8 @@ public class CashflowController {
         model.addAttribute("incomeCategories", IncomeCategory.values());
         model.addAttribute("expenseCategories", ExpenseCategory.values());
 
-        // UPDATED: use accessible accounts (owned + shared)
-        model.addAttribute("accounts", getAccessibleAccounts(user));
+        model.addAttribute("accounts", accessibleAccounts);
 
-        // Pass back selected filters for form inputs
         model.addAttribute("selectedType", type);
         model.addAttribute("selectedCategory", category);
         model.addAttribute("selectedDateFrom", dateFrom);
@@ -179,20 +185,15 @@ public class CashflowController {
     @GetMapping("/add")
     public String showAddForm(Model model) {
         User user = getCurrentUser();
-        if (user == null) {
-            return "redirect:/login";
-        }
+        if (user == null) return "redirect:/login";
 
         Cashflow cashflow = new Cashflow();
-        cashflow.setDate(java.time.LocalDate.now());
-        cashflow.setType(CashflowType.INCOME);  // default to INCOME for better UX
+        cashflow.setDate(LocalDate.now());
+        cashflow.setType(CashflowType.INCOME);
         model.addAttribute("cashflow", cashflow);
 
         model.addAttribute("types", CashflowType.values());
-
-        // UPDATED: use accessible accounts (owned + shared)
         model.addAttribute("accounts", getAccessibleAccounts(user));
-
         model.addAttribute("incomeCategories", IncomeCategory.values());
         model.addAttribute("expenseCategories", ExpenseCategory.values());
 
@@ -204,16 +205,11 @@ public class CashflowController {
                               BindingResult result,
                               Model model) {
         User user = getCurrentUser();
-        if (user == null) {
-            return "redirect:/login";
-        }
+        if (user == null) return "redirect:/login";
 
         if (result.hasErrors()) {
             model.addAttribute("types", CashflowType.values());
-
-            // UPDATED: use accessible accounts (owned + shared)
             model.addAttribute("accounts", getAccessibleAccounts(user));
-
             model.addAttribute("incomeCategories", IncomeCategory.values());
             model.addAttribute("expenseCategories", ExpenseCategory.values());
             return "cashflow_form";
@@ -221,6 +217,14 @@ public class CashflowController {
 
         if (cashflow.getAccount() != null && cashflow.getAccount().getId() != null) {
             Account account = accountRepository.findById(cashflow.getAccount().getId()).orElse(null);
+            if (account == null || !getAccessibleAccounts(user).contains(account)) {
+                result.rejectValue("account", "error.cashflow", "Selected account not accessible.");
+                model.addAttribute("types", CashflowType.values());
+                model.addAttribute("accounts", getAccessibleAccounts(user));
+                model.addAttribute("incomeCategories", IncomeCategory.values());
+                model.addAttribute("expenseCategories", ExpenseCategory.values());
+                return "cashflow_form";
+            }
             cashflow.setAccount(account);
         } else {
             cashflow.setAccount(null);
@@ -228,18 +232,19 @@ public class CashflowController {
 
         cashflow.setUser(user);
 
-        if (cashflow.getAccount() != null && cashflow.getAmount() != null) {
-            Account account = cashflow.getAccount();
-            if (cashflow.getType() == CashflowType.INCOME) {
-                account.setBalance(account.getBalance().add(cashflow.getAmount()));
-                cashflow.setExpenseCategory(null);
-                accountRepository.save(account);
-            } else if (cashflow.getType() == CashflowType.EXPENSE) {
-                cashflow.setIncomeCategory(null);
-            }
+        // Fix category XOR
+        if (cashflow.getType() == CashflowType.INCOME) {
+            cashflow.setExpenseCategory(null);
+        } else if (cashflow.getType() == CashflowType.EXPENSE) {
+            cashflow.setIncomeCategory(null);
         }
 
         cashflowRepository.save(cashflow);
+
+        // Recalculate balance after adding cashflow
+        if (cashflow.getAccount() != null) {
+            recalculateAccountBalance(cashflow.getAccount());
+        }
 
         return "redirect:/profile";
     }
@@ -247,24 +252,21 @@ public class CashflowController {
     @PostMapping("/delete/{id}")
     public String deleteCashflow(@PathVariable Long id) {
         User user = getCurrentUser();
-        if (user == null) {
-            return "redirect:/login";
-        }
+        if (user == null) return "redirect:/login";
 
         Cashflow cashflow = cashflowRepository.findById(id).orElse(null);
-        if (cashflow == null || !cashflow.getUser().getId().equals(user.getId())) {
+        if (cashflow == null || !getAccessibleAccounts(user).contains(cashflow.getAccount())) {
             return "redirect:/cashflow";
         }
 
         Account account = cashflow.getAccount();
-        if (account != null && cashflow.getAmount() != null) {
-            if (cashflow.getType() == CashflowType.INCOME) {
-                account.setBalance(account.getBalance().subtract(cashflow.getAmount()));
-                accountRepository.save(account);
-            }
-        }
 
         cashflowRepository.delete(cashflow);
+
+        // Recalculate balance after deletion
+        if (account != null) {
+            recalculateAccountBalance(account);
+        }
 
         return "redirect:/profile";
     }
@@ -272,21 +274,16 @@ public class CashflowController {
     @GetMapping("/edit/{id}")
     public String showEditForm(@PathVariable Long id, Model model) {
         User user = getCurrentUser();
-        if (user == null) {
-            return "redirect:/login";
-        }
+        if (user == null) return "redirect:/login";
 
         Cashflow cashflow = cashflowRepository.findById(id).orElse(null);
-        if (cashflow == null || !cashflow.getUser().getId().equals(user.getId())) {
+        if (cashflow == null || !getAccessibleAccounts(user).contains(cashflow.getAccount())) {
             return "redirect:/cashflow";
         }
 
         model.addAttribute("cashflow", cashflow);
         model.addAttribute("types", CashflowType.values());
-
-        // UPDATED: use accessible accounts (owned + shared)
         model.addAttribute("accounts", getAccessibleAccounts(user));
-
         model.addAttribute("incomeCategories", IncomeCategory.values());
         model.addAttribute("expenseCategories", ExpenseCategory.values());
 
@@ -299,56 +296,61 @@ public class CashflowController {
                                  BindingResult result,
                                  Model model) {
         User user = getCurrentUser();
-        if (user == null) {
-            return "redirect:/login";
-        }
+        if (user == null) return "redirect:/login";
 
         if (result.hasErrors()) {
             model.addAttribute("types", CashflowType.values());
-
-            // UPDATED: use accessible accounts (owned + shared)
             model.addAttribute("accounts", getAccessibleAccounts(user));
-
             model.addAttribute("incomeCategories", IncomeCategory.values());
             model.addAttribute("expenseCategories", ExpenseCategory.values());
             return "cashflow_form";
         }
 
         Cashflow existingCashflow = cashflowRepository.findById(id).orElse(null);
-        if (existingCashflow == null || !existingCashflow.getUser().getId().equals(user.getId())) {
-            return "redirect:/profile";
+        if (existingCashflow == null || !getAccessibleAccounts(user).contains(existingCashflow.getAccount())) {
+            return "redirect:/cashflow";
         }
 
-        // Reverse old income effect if needed
-        Account oldAccount = existingCashflow.getAccount();
-        if (oldAccount != null && existingCashflow.getType() == CashflowType.INCOME && existingCashflow.getAmount() != null) {
-            oldAccount.setBalance(oldAccount.getBalance().subtract(existingCashflow.getAmount()));
-            accountRepository.save(oldAccount);
+        List<Account> accessibleAccounts = getAccessibleAccounts(user);
+
+        Account newAccount = null;
+        if (updatedCashflow.getAccount() != null && updatedCashflow.getAccount().getId() != null) {
+            newAccount = accountRepository.findById(updatedCashflow.getAccount().getId()).orElse(null);
+            if (newAccount == null || !accessibleAccounts.contains(newAccount)) {
+                result.rejectValue("account", "error.cashflow", "Selected account not accessible.");
+                model.addAttribute("types", CashflowType.values());
+                model.addAttribute("accounts", accessibleAccounts);
+                model.addAttribute("incomeCategories", IncomeCategory.values());
+                model.addAttribute("expenseCategories", ExpenseCategory.values());
+                return "cashflow_form";
+            }
         }
+
+        Account oldAccount = existingCashflow.getAccount();
 
         // Update fields
-        existingCashflow.setDescription(updatedCashflow.getDescription());
+        existingCashflow.setAccount(newAccount);
         existingCashflow.setType(updatedCashflow.getType());
         existingCashflow.setAmount(updatedCashflow.getAmount());
         existingCashflow.setDate(updatedCashflow.getDate());
+        existingCashflow.setDescription(updatedCashflow.getDescription());
 
-        if (updatedCashflow.getAccount() != null && updatedCashflow.getAccount().getId() != null) {
-            Account newAccount = accountRepository.findById(updatedCashflow.getAccount().getId()).orElse(null);
-            existingCashflow.setAccount(newAccount);
-        } else {
-            existingCashflow.setAccount(null);
+        if (existingCashflow.getType() == CashflowType.INCOME) {
+            existingCashflow.setIncomeCategory(updatedCashflow.getIncomeCategory());
+            existingCashflow.setExpenseCategory(null);
+        } else if (existingCashflow.getType() == CashflowType.EXPENSE) {
+            existingCashflow.setExpenseCategory(updatedCashflow.getExpenseCategory());
+            existingCashflow.setIncomeCategory(null);
         }
-
-        existingCashflow.setIncomeCategory(updatedCashflow.getIncomeCategory());
-        existingCashflow.setExpenseCategory(updatedCashflow.getExpenseCategory());
 
         cashflowRepository.save(existingCashflow);
 
-        // Apply new income effect if applicable
-        Account newAccount = existingCashflow.getAccount();
-        if (newAccount != null && existingCashflow.getType() == CashflowType.INCOME && existingCashflow.getAmount() != null) {
-            newAccount.setBalance(newAccount.getBalance().add(existingCashflow.getAmount()));
-            accountRepository.save(newAccount);
+        // Recalculate balance for both old and new accounts if they differ
+        if (oldAccount != null) {
+            recalculateAccountBalance(oldAccount);
+        }
+        if (newAccount != null && !newAccount.equals(oldAccount)) {
+            recalculateAccountBalance(newAccount);
         }
 
         return "redirect:/profile";
